# sudoku-solver

./: CMakeLists.txt  LICENSE  README.md
examples/: 4x4example_1.txt  9x9example_2.txt  9x9example_3.txt  9x9example_4.txt  9x9example_5.txt
src/: interface.cc  interface.h  main.cc  puzzle.cc  puzzle.h
tests/: test_interface.cc  test_puzzle.cc  test_puzzle_private.cc
